css/style.css
﻿
/*

#cd2929 red
#f5f5f5 white
#212121 black
#F4831C   Cybercup color
*/



@font-face {
  font-family: 'Exo2.0-Black';
  src: url('../fonts/exo_2.0/Exo2.0-Black.eot'), url('../fonts/exo_2.0/Exo2.0-Black.otf');
}

@font-face {
  font-family: 'Exo2.0-Bold';
  src: url('../fonts/exo_2.0/Exo2.0-Bold.eot'), url('../fonts/exo_2.0/Exo2.0-Bold.otf');
}

@font-face {
  font-family: 'Exo2.0-Thin';
  src: url('../fonts/exo_2.0/Exo2.0-Thin.eot'), url('../fonts/exo_2.0/Exo2.0-Thin.otf');
}

@font-face {
  font-family: 'Exo2.0-Regular';
  src: url('../fonts/exo_2.0/Exo2.0-Regular.eot'), url('../fonts/exo_2.0/Exo2.0-Regular.otf');
}

@font-face {
  font-family: 'Zilap';
  src: url('../fonts/exo_2.0/zilap.ttf') , url('../fonts/exo_2.0/zilap.ttf')
}

@font-face {
  font-family: 'stencils';
  src: url('../fonts/exo_2.0/stencils.ttf') , url('../fonts/exo_2.0/stencils.ttf')
}


body{
    font-family: 'Exo2.0-Regular',sans-serif;
    background-color: #f5f5f5;

}

::-webkit-scrollbar {
    width: 0px;
}

::-webkit-scrollbar-track {
    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0);
    padding: 0 2px;
}

::-webkit-scrollbar-thumb {
  background-color:#F4831C;
  border-radius: 4px;
  padding: 0 2px;
  /*outline: 1px solid #333;*/
}

.top-bar{
  float: left;
  position: fixed;
  width: 100%;
  height: 75px;
  z-index: 10;
  /*background : url("../img/nav-bg.png") repeat-x;*/
}

.wrap960{width: 90%; margin: 0 auto;}

.logo-box{
  float: left;
  position: relative;
  left: 7%;
  width: 75px;
  height: 75px;
  background-repeat: no-repeat;
  overflow: hidden;
  border-radius: 50%;
  background-color: #fff;
  box-shadow:
    0 0 100px 20px #fff;
 
  }

.logo{
  transition: background 0.3s ease-out;
  background: url("../img/plogo2k15(1).png") repeat-x;
  background-size: 100% 100%;
  
}
.logo-box p{
  margin: 0;
  height: 75px;
}
.logo > a{
  text-indent: -9999px;
}
.nav-box{
  height: 75px;
  width: 1000px;
  /*background: #00f;*/
  float: right;
}
.menu-button{
  display: none;
  float: right;
  background: url("../img/menu-button.png") left center;
  width:36px;
  height: 50px;
}
.nav {
  list-style-type: none;
  text-align: center;
  position: relative;
}
.nav li{
  display:inline-block;
  position: relative;
}
.nav  a{
  font-family: 'Exo2.0-Bold',sans-serif;
  text-transform: uppercase;
  position: relative;
  top: 10px;
  text-decoration: none;
  color: #f5f5f5;
  
  padding: 29px 10px;
  background : url("../img/nav-bg.png") no-repeat;
  background-position: 300px 0px;
  transition: background 0.1s linear,color 0.3s linear;
}

.nav a:hover, .nav-active{
  /*background : url("../img/nav-bg.png") no-repeat;*/
  background-position: center !important;
  color:#fff !important;
  transition: background 0.1s linear,color 0.3s linear;
  background-color: #F4831C
}

.top-bar-black {
  background-color: #333;
}

.top-bar-black a{
  color: #a4a4a4;
}
.top-bar-black a:hover{
  color: #fff !important;
}

.top-bar-black .logo{
  transition: background 0.3s ease-in;
  /*background: url("../img/para_logo_ph.png") no-repeat;*/
  background-position: -100%;
}

.home-slide{
  width: 100%;
  height: 100%;
  min-height: 800px;
  background: #333 url("../img/tech.gif") no-repeat center center fixed;
  background-size: cover;
}

.overlay-pattern{
 background: url("../img/black-pattern.png"); 
  width: 100%;
  height: 100%;
}

.scroll-down{
  width: 50px;
  height: 50px;
  margin: 0;
  position: absolute;
  left: 45%;
  bottom: 10px;
  cursor: pointer;
}

.para-slide{
  font-size: 1em;
  margin: 0 auto;
  font-weight: normal;
  line-height: 80px;
  position: relative;
  top: 30%;
  width: 850px;
 }
.pre-para , .para-slide, .post-para{
  text-transform: uppercase;
}

.pre-para{
  height: 80px;
  color: #f5f5f5;
  font-size: 4em;
  font-family: 'Exo2.0-Thin',sans-serif;
  text-align: left;
  padding-left: 20px;
}

.para{
  font-family: 'zilap',sans-serif;
  font-size: 10em;
  color:#F4831C;
  height: 0px;
  width: 50%;
  text-align: right;
  box-sizing: border-box;
 
}

.digm{
  float: right;
  padding-left: 60px;
  height: 0px;
  width: 50%;
  box-align: right;
  box-sizing: border-box;
  font-size: 10em;
  color: #f5f5f5;
  font-family: 'zilap',sans-serif ;
  text-shadow: #F4831C 0 0 20px, #F4831C 8px 5px 5px;
}

.post-para{
  text-align: right;
  line-height: 120px;
  color: #F4831C ;
  font-size: 3em;
  font-family: 'stencils';
  display: none;
  padding-left: 10px;
  padding-right: 55px;
}
.post-post-para{
  text-align: center;
  color: #F4831C ;
  font-size: 2.5em;
  font-family: 'stencils' ;
  display: none;
  padding-right: 55px;
  margin: auto;
}
/* NOTE: about section css begins*/
  .about-container{
    height: auto;
    background:  url("../img/bg_dots_black.png") ;
    padding: 20px 0;
  }
.sponsor-container{
    height: auto;
    background:  url("../img/bg_dots_black.png") ;
    
  }

  .section-title {
    text-shadow: rgba(0,0,0,.01) 0 0 1px;
    font-family: 'Exo2.0-Bold',sans-serif;
    font-size: 2em;
    text-transform: uppercase;
    text-align: center;
    color: #212121;
  }
  .section-title p{font-size: 0.5em; margin: 0; line-height: 3px;}

  .about-para{width: 80%; margin: 0 auto; padding: 5px 0; text-align: center; font-family: "Exo2.0-Regular",sans-serif; font-size: 20px}
  .about-para span{color: #F4831C; font-weight: bold;}

  .main-logo-container{width: 100%; height: 250px;}
  .main-logo{width: 250px; margin: 0 auto; overflow: hidden;}
/*New Edit- para-detail height changed */
  .para-detail-container{width: 100%; height: 115px; text-align: center; text-transform: uppercase; font-family: "Exo2.0-Bold",sans-serif;}
  .num-event{width: 33.3333333333%; box-sizing: border-box; float: left;}
  .event-date{width: 33.3333333333%; box-sizing: border-box; float: left;}
  .cash-prize{width: 33.3333333333%; box-sizing: border-box; float: right;}
  .num-event span, .cash-prize span, .event-date span{color: #F4831C; font-size: 3em;}
/* ... */

